Fixed everything for attempt 4

--- a/src/main/resources/show_appointments-view.fxml
+++ b/src/main/resources/show_appointments-view.fxml
@@ -4,16 +4,16 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="580.0" prefWidth="1038.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ed.wgu.zamzow.software_ii.controllers.ShowAppointmentsViewController">
+<AnchorPane prefHeight="580.0" prefWidth="1038.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ed.wgu.zamzow.software_ii.controllers.ShowAppointmentsViewController">
    <children><Label layoutX="278.0" layoutY="47.0" text="Modify and Delete Appointments" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <TabPane layoutX="6.0" layoutY="82.0" prefHeight="455.0" prefWidth="1023.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tabPane" layoutX="6.0" layoutY="82.0" prefHeight="489.0" prefWidth="1023.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Weekly">
-                   <TableView fx:id="tblWeeklyAppointments" prefHeight="323.0" prefWidth="779.0">
+          <Tab text="Weekly" fx:id="tabWeekly">
+                   <TableView fx:id="tblWeeklyAppointments" prefHeight="367.0" prefWidth="1023.0">
                        <columns>
                            <TableColumn fx:id="colID" prefWidth="105.0" text="Appointment ID" />
                            <TableColumn fx:id="colTitle" prefWidth="100.0" text="Title" />
@@ -27,11 +27,9 @@
                            <TableColumn fx:id="colContact" prefWidth="79.0" text="Contact" />
                        </columns>
                    </TableView>
-              <Button fx:id="btnWDel" layoutX="973.0" layoutY="541.0" mnemonicParsing="false" onMouseClicked="#DeleteWAppointment" text="Delete" textAlignment="CENTER" textFill="RED" />
-              <Button fx:id="btnWMod" layoutX="899.0" layoutY="541.0" mnemonicParsing="false" onMouseClicked="#ModifyWAppointment" text="Modify" textAlignment="CENTER" />
 
           </Tab>
-          <Tab text="Monthly">
+          <Tab text="Monthly" fx:id="tabMonthly">
               <TableView fx:id="tblMonthlyAppointments" prefHeight="323.0" prefWidth="779.0">
                   <columns>
                       <TableColumn fx:id="colMID" prefWidth="105.0" text="Appointment ID" />
@@ -46,11 +44,10 @@
                       <TableColumn fx:id="colMContact" prefWidth="79.0" text="Contact" />
                   </columns>
               </TableView>
-              <Button fx:id="btnMDel" layoutX="973.0" layoutY="541.0" mnemonicParsing="false" onMouseClicked="#DeleteMAppointment" text="Delete" textAlignment="CENTER" textFill="RED" />
-              <Button fx:id="btnMMod" layoutX="899.0" layoutY="541.0" mnemonicParsing="false" onMouseClicked="#ModifyMAppointment" text="Modify" textAlignment="CENTER" />
-
           </Tab>
         </tabs>
       </TabPane>
+     <Button fx:id="btnWMod" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#ModifyButton" text="Modify" textAlignment="CENTER" />
+     <Button fx:id="btnWDel" layoutX="78.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#DeleteButton" text="Delete" textAlignment="CENTER" textFill="RED" />
    </children>
 </AnchorPane>
